# OFX-plugins-1

./: .gitignore  README.md
adjust-rgb/: CMakeLists.txt  README.md  build-windows.bat
adjust-rgb-torch-CPU/: README.md  build-linux.sh  build-windows.bat
adjust-rgb-torch-CPU/include-local/: imHost.hpp
adjust-rgb-torch-CPU/src/: imHost.cpp  plugin.cpp
adjust-rgb-torch-CUDA/: CMakeLists.txt  README.md  build-windows.bat
adjust-rgb-torch-CUDA/dev-misc/: natron-test-linux.ntp
adjust-rgb-torch-CUDA/include-local/: fetchData.hpp  imHandler.hpp
adjust-rgb-torch-CUDA/src/: fetchData.cpp  imHandler.cpp
adjust-rgb/dev-misc/: natron-test-windows.ntp
adjust-rgb/include-local/: defineMacros.h  imHandler.hpp  imProcessing.hpp
adjust-rgb/src/: imHandler.cpp  plugin.cpp
